--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "35a41649",
    "metadata": {},
    "outputs": [],
@@ -13,27 +13,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5608b012",
+   "execution_count": 12,
+   "id": "32cf95d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#open dataset"
+    "#open dataset\n",
+    "schools_csv = \"Resources/schools_complete.csv\"\n",
+    "students_csv = \"Resources/students_complete.csv\"\n",
+    "\n",
+    "schools_df = pd.read_csv(schools_csv, index_col=\"School ID\")\n",
+    "students_df = pd.read_csv(students_csv, index_col=\"Student ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e72d76be",
+   "execution_count": 13,
+   "id": "2f8e6ae7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              size        budget\n",
+      "count    15.000000  1.500000e+01\n",
+      "mean   2611.333333  1.643295e+06\n",
+      "std    1420.915282  9.347763e+05\n",
+      "min     427.000000  2.480870e+05\n",
+      "25%    1698.000000  1.046265e+06\n",
+      "50%    2283.000000  1.319574e+06\n",
+      "75%    3474.000000  2.228999e+06\n",
+      "max    4976.000000  3.124928e+06\n",
+      "school_name    object\n",
+      "type           object\n",
+      "size            int64\n",
+      "budget          int64\n",
+      "dtype: object\n",
+      "school_name    15\n",
+      "type           15\n",
+      "size           15\n",
+      "budget         15\n",
+      "dtype: int64\n",
+      "                     school_name      type  size   budget\n",
+      "School ID                                                \n",
+      "0              Huang High School  District  2917  1910635\n",
+      "1           Figueroa High School  District  2949  1884411\n",
+      "2            Shelton High School   Charter  1761  1056600\n",
+      "3          Hernandez High School  District  4635  3022020\n",
+      "4            Griffin High School   Charter  1468   917500\n"
+     ]
+    }
+   ],
    "source": [
-    "#Check dataset consistency and stats"
+    "#Check dataset consistency and stats\n",
+    "print(schools_df.describe())\n",
+    "print(schools_df.dtypes)\n",
+    "print(schools_df.count())\n",
+    "print(schools_df.head())"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0e86936d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       reading_score    math_score\n",
+      "count    39170.00000  39170.000000\n",
+      "mean        81.87784     78.985371\n",
+      "std         10.23958     12.309968\n",
+      "min         63.00000     55.000000\n",
+      "25%         73.00000     69.000000\n",
+      "50%         82.00000     79.000000\n",
+      "75%         91.00000     89.000000\n",
+      "max         99.00000     99.000000\n",
+      "student_name     object\n",
+      "gender           object\n",
+      "grade            object\n",
+      "school_name      object\n",
+      "reading_score     int64\n",
+      "math_score        int64\n",
+      "dtype: object\n",
+      "student_name     39170\n",
+      "gender           39170\n",
+      "grade            39170\n",
+      "school_name      39170\n",
+      "reading_score    39170\n",
+      "math_score       39170\n",
+      "dtype: int64\n",
+      "                 student_name gender grade        school_name  reading_score  \\\n",
+      "Student ID                                                                     \n",
+      "0                Paul Bradley      M   9th  Huang High School             66   \n",
+      "1                Victor Smith      M  12th  Huang High School             94   \n",
+      "2             Kevin Rodriguez      M  12th  Huang High School             90   \n",
+      "3           Dr. Richard Scott      M  12th  Huang High School             67   \n",
+      "4                  Bonnie Ray      F   9th  Huang High School             97   \n",
+      "\n",
+      "            math_score  \n",
+      "Student ID              \n",
+      "0                   79  \n",
+      "1                   61  \n",
+      "2                   60  \n",
+      "3                   58  \n",
+      "4                   84  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check dataset consistency and stats\n",
+    "print(students_df.describe())\n",
+    "print(students_df.dtypes)\n",
+    "print(students_df.count())\n",
+    "print(students_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d711bed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       School ID         size        budget\n",
+      "count  15.000000    15.000000  1.500000e+01\n",
+      "mean    7.000000  2611.333333  1.643295e+06\n",
+      "std     4.472136  1420.915282  9.347763e+05\n",
+      "min     0.000000   427.000000  2.480870e+05\n",
+      "25%     3.500000  1698.000000  1.046265e+06\n",
+      "50%     7.000000  2283.000000  1.319574e+06\n",
+      "75%    10.500000  3474.000000  2.228999e+06\n",
+      "max    14.000000  4976.000000  3.124928e+06\n",
+      "School ID       int64\n",
+      "school_name    object\n",
+      "type           object\n",
+      "size            int64\n",
+      "budget          int64\n",
+      "dtype: object\n",
+      "School ID      15\n",
+      "school_name    15\n",
+      "type           15\n",
+      "size           15\n",
+      "budget         15\n",
+      "dtype: int64\n",
+      "   School ID            school_name      type  size   budget\n",
+      "0          0      Huang High School  District  2917  1910635\n",
+      "1          1   Figueroa High School  District  2949  1884411\n",
+      "2          2    Shelton High School   Charter  1761  1056600\n",
+      "3          3  Hernandez High School  District  4635  3022020\n",
+      "4          4    Griffin High School   Charter  1468   917500\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "6ebd7f46",
+   "id": "7fbdf6dc",
    "metadata": {},
    "source": [
     "Primary analysis\n",
@@ -42,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681675ba",
+   "id": "d33a3e0a",
    "metadata": {},
    "source": [
     "District Summary\n",
@@ -52,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3530ef1",
+   "id": "04064ed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9615f332",
+   "id": "e973becc",
    "metadata": {},
    "source": [
     "School Summary\n",
@@ -95,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5489878c",
+   "id": "b5146b5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e56b7aa7",
+   "id": "47acd31b",
    "metadata": {},
    "source": [
     "Top performing schools\n",
@@ -141,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb2f91a",
+   "id": "56e64baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "367c4055",
+   "id": "2d56b4f8",
    "metadata": {},
    "source": [
     "Bottom performing schools\n",
@@ -163,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195da852",
+   "id": "e47108c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba70502",
+   "id": "2f869089",
    "metadata": {},
    "source": [
     "Secondary analysis\n",
@@ -184,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e500e319",
+   "id": "174ead30",
    "metadata": {},
    "source": [
     "Maths scores by grade\n",
@@ -193,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c21e80",
+   "id": "fe9efd20",
    "metadata": {},
    "source": [
     "Reading scores by grade\n",
@@ -202,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9db164",
+   "id": "97e60104",
    "metadata": {},
    "source": [
     "Scores by school spending\n",
@@ -212,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bfc2034",
+   "id": "617dd1b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edbbef94",
+   "id": "8525b1d6",
    "metadata": {},
    "source": [
     "Scores by school size\n",
@@ -237,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a566d82",
+   "id": "50885407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d916164",
+   "id": "207af4fd",
    "metadata": {},
    "source": [
     "Scores by school type\n",
@@ -262,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd662241",
+   "id": "83061907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7724e314",
+   "id": "32ba2c39",
    "metadata": {},
    "source": [
     "Reporting\n",
