First pass at summary table

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "32cf95d0",
+   "id": "0b4beca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2f8e6ae7",
+   "id": "7dc97cd0",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0e86936d",
+   "id": "70fc8c71",
    "metadata": {},
    "outputs": [
     {
@@ -134,49 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d711bed8",
+   "execution_count": 15,
+   "id": "4c77e595",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       School ID         size        budget\n",
-      "count  15.000000    15.000000  1.500000e+01\n",
-      "mean    7.000000  2611.333333  1.643295e+06\n",
-      "std     4.472136  1420.915282  9.347763e+05\n",
-      "min     0.000000   427.000000  2.480870e+05\n",
-      "25%     3.500000  1698.000000  1.046265e+06\n",
-      "50%     7.000000  2283.000000  1.319574e+06\n",
-      "75%    10.500000  3474.000000  2.228999e+06\n",
-      "max    14.000000  4976.000000  3.124928e+06\n",
-      "School ID       int64\n",
-      "school_name    object\n",
-      "type           object\n",
-      "size            int64\n",
-      "budget          int64\n",
-      "dtype: object\n",
-      "School ID      15\n",
-      "school_name    15\n",
-      "type           15\n",
-      "size           15\n",
-      "budget         15\n",
-      "dtype: int64\n",
-      "   School ID            school_name      type  size   budget\n",
-      "0          0      Huang High School  District  2917  1910635\n",
-      "1          1   Figueroa High School  District  2949  1884411\n",
-      "2          2    Shelton High School   Charter  1761  1056600\n",
-      "3          3  Hernandez High School  District  4635  3022020\n",
-      "4          4    Griffin High School   Charter  1468   917500\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "#Set pass mark\n",
+    "maths_pass = 65\n",
+    "reading_pass = 65"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "7fbdf6dc",
+   "id": "7b719c29",
    "metadata": {},
    "source": [
     "Primary analysis\n",
@@ -185,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d33a3e0a",
+   "id": "b1799099",
    "metadata": {},
    "source": [
     "District Summary\n",
@@ -194,41 +164,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "04064ed4",
+   "execution_count": 26,
+   "id": "8da41ebf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Total schools\n",
-    "\n",
+    "total_schools = schools_df.school_name.count()\n",
     "\n",
     "#Total students\n",
-    "\n",
+    "total_students = students_df.school_name.count()\n",
     "\n",
     "#Total budget\n",
-    "\n",
+    "total_budget = schools_df.budget.sum()\n",
     "\n",
     "#Average maths score\n",
-    "\n",
+    "average_maths = students_df.math_score.mean()\n",
     "\n",
     "#Average reading score\n",
-    "\n",
+    "average_reading = students_df.reading_score.mean()\n",
     "\n",
     "#% passing maths\n",
-    "\n",
+    "pc_pass_maths = students_df[students_df.math_score > maths_pass].count()[\"math_score\"]*100/total_students\n",
     "\n",
     "#% passing reading\n",
-    "\n",
+    "pc_pass_read = students_df[students_df.reading_score > reading_pass].count()[\"reading_score\"]*100/total_students\n",
     "\n",
     "#% overall passing\n",
+    "pc_pass_both = students_df[(students_df.math_score > maths_pass) & (students_df.reading_score > reading_pass)].count()[\"math_score\"]*100/total_students\n",
     "\n",
+    "#Create summary table\n",
+    "summary_df = pd.DataFrame(\n",
+    "              {\"Total Schools\": total_schools, \"Total Students\": total_students, \"Total Budget\": total_budget, \n",
+    "               \"Average Maths Score\": average_maths, \"Average Reading Score\": average_reading,\n",
+    "              \"% passing maths\": pc_pass_maths, \"% passing reading\": pc_pass_read,\n",
+    "              \"% passing both\": pc_pass_both}, index=[1])\n",
     "\n",
-    "#Create summary table"
+    "pc_pass_maths"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e973becc",
+   "id": "d32f38c6",
    "metadata": {},
    "source": [
     "School Summary\n",
@@ -238,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5146b5f",
+   "id": "e855762f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47acd31b",
+   "id": "feca7948",
    "metadata": {},
    "source": [
     "Top performing schools\n",
@@ -284,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e64baf",
+   "id": "f70e0478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d56b4f8",
+   "id": "00038fc1",
    "metadata": {},
    "source": [
     "Bottom performing schools\n",
@@ -306,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e47108c6",
+   "id": "947faa95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f869089",
+   "id": "2f943581",
    "metadata": {},
    "source": [
     "Secondary analysis\n",
@@ -327,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "174ead30",
+   "id": "fb0fdba2",
    "metadata": {},
    "source": [
     "Maths scores by grade\n",
@@ -336,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe9efd20",
+   "id": "68032e6d",
    "metadata": {},
    "source": [
     "Reading scores by grade\n",
@@ -345,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e60104",
+   "id": "439ef5ff",
    "metadata": {},
    "source": [
     "Scores by school spending\n",
@@ -355,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "617dd1b3",
+   "id": "1e40902e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8525b1d6",
+   "id": "953fe2ca",
    "metadata": {},
    "source": [
     "Scores by school size\n",
@@ -380,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50885407",
+   "id": "33263105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207af4fd",
+   "id": "bd985a27",
    "metadata": {},
    "source": [
     "Scores by school type\n",
@@ -405,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83061907",
+   "id": "3bbd8534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ba2c39",
+   "id": "3fd45c2c",
    "metadata": {},
    "source": [
     "Reporting\n",
