Working summary table

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0b4beca9",
+   "id": "88de5f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7dc97cd0",
+   "id": "0bd4554f",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "70fc8c71",
+   "id": "08aa291c",
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4c77e595",
+   "execution_count": 29,
+   "id": "7a3ddc8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b719c29",
+   "id": "871d1d25",
    "metadata": {},
    "source": [
     "Primary analysis\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1799099",
+   "id": "6a5d4cde",
    "metadata": {},
    "source": [
     "District Summary\n",
@@ -164,17 +164,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8da41ebf",
+   "execution_count": 31,
+   "id": "11e0b109",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Maths Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% passing maths</th>\n",
+       "      <th>% passing reading</th>\n",
+       "      <th>% passing both</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>83.112076</td>\n",
+       "      <td>94.263467</td>\n",
+       "      <td>78.787337</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "100.0"
+       "   Total Schools  Total Students  Total Budget  Average Maths Score  \\\n",
+       "1             15           39170      24649428            78.985371   \n",
+       "\n",
+       "   Average Reading Score  % passing maths  % passing reading  % passing both  \n",
+       "1               81.87784        83.112076          94.263467       78.787337  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,12 +260,12 @@
     "              \"% passing maths\": pc_pass_maths, \"% passing reading\": pc_pass_read,\n",
     "              \"% passing both\": pc_pass_both}, index=[1])\n",
     "\n",
-    "pc_pass_maths"
+    "summary_df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d32f38c6",
+   "id": "33b9a991",
    "metadata": {},
    "source": [
     "School Summary\n",
@@ -226,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e855762f",
+   "id": "a79d1ca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feca7948",
+   "id": "e5ef3477",
    "metadata": {},
    "source": [
     "Top performing schools\n",
@@ -272,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70e0478",
+   "id": "9b007281",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00038fc1",
+   "id": "2806112c",
    "metadata": {},
    "source": [
     "Bottom performing schools\n",
@@ -294,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947faa95",
+   "id": "9339d603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f943581",
+   "id": "0f6bab06",
    "metadata": {},
    "source": [
     "Secondary analysis\n",
@@ -315,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb0fdba2",
+   "id": "1d7dcb1a",
    "metadata": {},
    "source": [
     "Maths scores by grade\n",
@@ -324,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68032e6d",
+   "id": "9e6095a5",
    "metadata": {},
    "source": [
     "Reading scores by grade\n",
@@ -333,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439ef5ff",
+   "id": "faeb017e",
    "metadata": {},
    "source": [
     "Scores by school spending\n",
@@ -343,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e40902e",
+   "id": "b6743b62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "953fe2ca",
+   "id": "68f3b9fc",
    "metadata": {},
    "source": [
     "Scores by school size\n",
@@ -368,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33263105",
+   "id": "779eb313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd985a27",
+   "id": "d8229173",
    "metadata": {},
    "source": [
     "Scores by school type\n",
@@ -393,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bbd8534",
+   "id": "1c47e63a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd45c2c",
+   "id": "dcdbec06",
    "metadata": {},
    "source": [
     "Reporting\n",
