First school-based data

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "88de5f53",
+   "id": "1fdbafdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0bd4554f",
+   "id": "63c73f6d",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "08aa291c",
+   "id": "fde0ca06",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7a3ddc8e",
+   "id": "f9e2a5ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871d1d25",
+   "id": "ea12e148",
    "metadata": {},
    "source": [
     "Primary analysis\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a5d4cde",
+   "id": "2fa7067d",
    "metadata": {},
    "source": [
     "District Summary\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "11e0b109",
+   "id": "73fc11cf",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b9a991",
+   "id": "8c8e13bb",
    "metadata": {},
    "source": [
     "School Summary\n",
@@ -274,19 +274,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a79d1ca2",
+   "execution_count": 40,
+   "id": "b3adefcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       77.048432\n",
+       "Cabrera High School      83.061895\n",
+       "Figueroa High School     76.711767\n",
+       "Ford High School         77.102592\n",
+       "Griffin High School      83.351499\n",
+       "Hernandez High School    77.289752\n",
+       "Holden High School       83.803279\n",
+       "Huang High School        76.629414\n",
+       "Johnson High School      77.072464\n",
+       "Pena High School         83.839917\n",
+       "Rodriguez High School    76.842711\n",
+       "Shelton High School      83.359455\n",
+       "Thomas High School       83.418349\n",
+       "Wilson High School       83.274201\n",
+       "Wright High School       83.682222\n",
+       "Name: math_score, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Group by School Name\n",
-    "\n",
+    "grouped_students = students_df.groupby(\"school_name\")\n",
     "\n",
     "#Select columns\n",
     "\n",
-    "\n",
     "#Total students\n",
-    "\n",
+    "school_students = grouped_students[\"school_name\"].size()\n",
     "\n",
     "#Total school budget\n",
     "\n",
@@ -295,23 +321,25 @@
     "\n",
     "\n",
     "#Average maths score\n",
-    "\n",
+    "school_average_maths = grouped_students[\"math_score\"].mean()\n",
     "\n",
     "#Average reading score\n",
-    "\n",
+    "school_average_reading = grouped_students[\"reading_score\"].mean()\n",
     "\n",
     "#% Passing maths\n",
-    "\n",
+    "#school_passing_maths = grouped_students[\"math_score\" > reading_pass].count()\n",
     "\n",
     "#% passing reading\n",
     "\n",
     "\n",
-    "#% overall passing"
+    "#% overall passing\n",
+    "\n",
+    "school_average_maths"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5ef3477",
+   "id": "ce0f2d3a",
    "metadata": {},
    "source": [
     "Top performing schools\n",
@@ -321,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b007281",
+   "id": "73bdc356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2806112c",
+   "id": "4d9a0a0e",
    "metadata": {},
    "source": [
     "Bottom performing schools\n",
@@ -343,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9339d603",
+   "id": "167d279c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f6bab06",
+   "id": "d8de1282",
    "metadata": {},
    "source": [
     "Secondary analysis\n",
@@ -364,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d7dcb1a",
+   "id": "ac7111b9",
    "metadata": {},
    "source": [
     "Maths scores by grade\n",
@@ -373,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6095a5",
+   "id": "c0a8bdb8",
    "metadata": {},
    "source": [
     "Reading scores by grade\n",
@@ -382,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faeb017e",
+   "id": "dbc7ab12",
    "metadata": {},
    "source": [
     "Scores by school spending\n",
@@ -392,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6743b62",
+   "id": "61a1b381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f3b9fc",
+   "id": "bdfda08a",
    "metadata": {},
    "source": [
     "Scores by school size\n",
@@ -417,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779eb313",
+   "id": "6076589d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8229173",
+   "id": "cf2cd373",
    "metadata": {},
    "source": [
     "Scores by school type\n",
@@ -442,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c47e63a",
+   "id": "c9bf53d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdbec06",
+   "id": "c22d8989",
    "metadata": {},
    "source": [
     "Reporting\n",
