--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "66831a11",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,13 @@
     "students_csv = \"Resources/students_complete.csv\"\n",
     "\n",
     "schools_df = pd.read_csv(schools_csv, index_col=\"School ID\")\n",
-    "students_df = pd.read_csv(students_csv, index_col=\"Student ID\")"
+    "students_df = pd.read_csv(students_csv, index_col=\"Student ID\")\n",
+    "school_students_df = pd.merge(students_df, schools_df, how=\"left\", on=[\"school_name\", \"school_name\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "31dc0383",
    "metadata": {},
    "outputs": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "4ed7bf6e",
    "metadata": {},
    "outputs": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "cd3f110f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "f4c2a943",
    "metadata": {},
    "outputs": [
@@ -204,26 +205,26 @@
        "      <th>1</th>\n",
        "      <td>15</td>\n",
        "      <td>39170</td>\n",
-       "      <td>24649428</td>\n",
+       "      <td>$24,649,428.00</td>\n",
        "      <td>78.985371</td>\n",
        "      <td>81.87784</td>\n",
-       "      <td>83.112076</td>\n",
-       "      <td>94.263467</td>\n",
-       "      <td>78.787337</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools  Total Students  Total Budget  Average Maths Score  \\\n",
-       "1             15           39170      24649428            78.985371   \n",
+       "   Total Schools  Total Students    Total Budget  Average Maths Score  \\\n",
+       "1             15           39170  $24,649,428.00            78.985371   \n",
        "\n",
        "   Average Reading Score  % passing maths  % passing reading  % passing both  \n",
-       "1               81.87784        83.112076          94.263467       78.787337  "
+       "1               81.87784        74.980853          85.805463       65.172326  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,13 +246,13 @@
     "average_reading = students_df.reading_score.mean()\n",
     "\n",
     "#% passing maths\n",
-    "pc_pass_maths = students_df[students_df.math_score > maths_pass].count()[\"math_score\"]*100/total_students\n",
+    "pc_pass_maths = students_df[students_df.math_score >= maths_pass].count()[\"math_score\"]*100/total_students\n",
     "\n",
     "#% passing reading\n",
-    "pc_pass_read = students_df[students_df.reading_score > reading_pass].count()[\"reading_score\"]*100/total_students\n",
+    "pc_pass_read = students_df[students_df.reading_score >= reading_pass].count()[\"reading_score\"]*100/total_students\n",
     "\n",
     "#% overall passing\n",
-    "pc_pass_both = students_df[(students_df.math_score > maths_pass) & (students_df.reading_score > reading_pass)].count()[\"math_score\"]*100/total_students\n",
+    "pc_pass_both = students_df[(students_df.math_score >= maths_pass) & (students_df.reading_score >= reading_pass)].count()[\"math_score\"]*100/total_students\n",
     "\n",
     "#Create summary table\n",
     "summary_df = pd.DataFrame(\n",
@@ -260,6 +261,8 @@
     "              \"% passing maths\": pc_pass_maths, \"% passing reading\": pc_pass_read,\n",
     "              \"% passing both\": pc_pass_both}, index=[1])\n",
     "\n",
+    "#Adjust format of budget cell\n",
+    "summary_df[\"Total Budget\"] = summary_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
     "summary_df"
    ]
   },
@@ -274,51 +277,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "id": "2c79fa1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Name</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average maths score</th>\n",
+       "      <th>Average reading score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>3124928</td>\n",
+       "      <td>628.0</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cabrera High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>1081356</td>\n",
+       "      <td>582.0</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>1884411</td>\n",
+       "      <td>639.0</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ford High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>1763916</td>\n",
+       "      <td>644.0</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Griffin High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>917500</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Hernandez High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>3022020</td>\n",
+       "      <td>652.0</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Holden High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>248087</td>\n",
+       "      <td>581.0</td>\n",
+       "      <td>83.803279</td>\n",
+       "      <td>83.814988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>655.0</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>3094650</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Pena High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>585858</td>\n",
+       "      <td>609.0</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>2547363</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>1056600</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>83.359455</td>\n",
+       "      <td>83.725724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Wilson High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>1319574</td>\n",
+       "      <td>578.0</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>1049400</td>\n",
+       "      <td>583.0</td>\n",
+       "      <td>83.682222</td>\n",
+       "      <td>83.955000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "school_name\n",
-       "Bailey High School       77.048432\n",
-       "Cabrera High School      83.061895\n",
-       "Figueroa High School     76.711767\n",
-       "Ford High School         77.102592\n",
-       "Griffin High School      83.351499\n",
-       "Hernandez High School    77.289752\n",
-       "Holden High School       83.803279\n",
-       "Huang High School        76.629414\n",
-       "Johnson High School      77.072464\n",
-       "Pena High School         83.839917\n",
-       "Rodriguez High School    76.842711\n",
-       "Shelton High School      83.359455\n",
-       "Thomas High School       83.418349\n",
-       "Wilson High School       83.274201\n",
-       "Wright High School       83.682222\n",
-       "Name: math_score, dtype: float64"
+       "              School Name      Type  Total Students  Total School Budget  \\\n",
+       "0      Bailey High School  District            4976              3124928   \n",
+       "1     Cabrera High School   Charter            1858              1081356   \n",
+       "2    Figueroa High School  District            2949              1884411   \n",
+       "3        Ford High School  District            2739              1763916   \n",
+       "4     Griffin High School   Charter            1468               917500   \n",
+       "5   Hernandez High School  District            4635              3022020   \n",
+       "6      Holden High School   Charter             427               248087   \n",
+       "7       Huang High School  District            2917              1910635   \n",
+       "8     Johnson High School  District            4761              3094650   \n",
+       "9        Pena High School   Charter             962               585858   \n",
+       "10  Rodriguez High School  District            3999              2547363   \n",
+       "11    Shelton High School   Charter            1761              1056600   \n",
+       "12     Thomas High School   Charter            1635              1043130   \n",
+       "13     Wilson High School   Charter            2283              1319574   \n",
+       "14     Wright High School   Charter            1800              1049400   \n",
+       "\n",
+       "    Per Student Budget  Average maths score  Average reading score  \n",
+       "0                628.0            77.048432              81.033963  \n",
+       "1                582.0            83.061895              83.975780  \n",
+       "2                639.0            76.711767              81.158020  \n",
+       "3                644.0            77.102592              80.746258  \n",
+       "4                625.0            83.351499              83.816757  \n",
+       "5                652.0            77.289752              80.934412  \n",
+       "6                581.0            83.803279              83.814988  \n",
+       "7                655.0            76.629414              81.182722  \n",
+       "8                650.0            77.072464              80.966394  \n",
+       "9                609.0            83.839917              84.044699  \n",
+       "10               637.0            76.842711              80.744686  \n",
+       "11               600.0            83.359455              83.725724  \n",
+       "12               638.0            83.418349              83.848930  \n",
+       "13               578.0            83.274201              83.989488  \n",
+       "14               583.0            83.682222              83.955000  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Group by School Name\n",
-    "grouped_students = students_df.groupby(\"school_name\")\n",
+    "grouped_students = school_students_df.groupby([\"school_name\", \"type\"])\n",
     "\n",
-    "#Select columns\n",
+    "#School type\n",
+    "#school_type = grouped_students.sum().index.get_level_values(1)\n",
     "\n",
     "#Total students\n",
     "school_students = grouped_students[\"school_name\"].size()\n",
     "\n",
     "#Total school budget\n",
-    "\n",
+    "school_budget = grouped_students[\"budget\"].mean()\n",
     "\n",
     "#Per student budget\n",
-    "\n",
+    "school_student_budget = school_budget/school_students\n",
     "\n",
     "#Average maths score\n",
     "school_average_maths = grouped_students[\"math_score\"].mean()\n",
@@ -327,14 +530,21 @@
     "school_average_reading = grouped_students[\"reading_score\"].mean()\n",
     "\n",
     "#% Passing maths\n",
-    "#school_passing_maths = grouped_students[\"math_score\" > reading_pass].count()\n",
+    "#school_passing_maths = grouped_students.filter(lambda x: x[\"math_score\"]) >= maths_pass.count()\n",
+    "school_pass\n",
     "\n",
     "#% passing reading\n",
     "\n",
     "\n",
     "#% overall passing\n",
     "\n",
-    "school_average_maths"
+    "school_summary = pd.DataFrame(\n",
+    "                    {\"Total Students\": school_students, \n",
+    "                     \"Total School Budget\": school_budget, \"Per Student Budget\": school_student_budget,\n",
+    "                     \"Average maths score\": school_average_maths, \"Average reading score\": school_average_reading})\n",
+    "school_summary = school_summary.reset_index()\n",
+    "school_summary = school_summary.rename(columns={\"school_name\": \"School Name\", \"type\": \"Type\"})\n",
+    "school_summary"
    ]
   },
   {
