--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "id": "2c79fa1e",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "14               583.0            83.682222              83.955000  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,9 +510,7 @@
    "source": [
     "#Group by School Name\n",
     "grouped_students = school_students_df.groupby([\"school_name\", \"type\"])\n",
-    "\n",
-    "#School type\n",
-    "#school_type = grouped_students.sum().index.get_level_values(1)\n",
+    "grouped_students_df = pd.DataFrame(grouped_students)\n",
     "\n",
     "#Total students\n",
     "school_students = grouped_students[\"school_name\"].size()\n",
@@ -531,7 +529,7 @@
     "\n",
     "#% Passing maths\n",
     "#school_passing_maths = grouped_students.filter(lambda x: x[\"math_score\"]) >= maths_pass.count()\n",
-    "school_pass\n",
+    "#school_pass_maths = grouped_students_df.loc[grouped_students_df[\"math_score\"] >= maths_pass, :]\n",
     "\n",
     "#% passing reading\n",
     "\n",
@@ -558,15 +556,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "e6d9bff2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Name</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average maths score</th>\n",
+       "      <th>Average reading score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Pena High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>585858</td>\n",
+       "      <td>609.0</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Holden High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>248087</td>\n",
+       "      <td>581.0</td>\n",
+       "      <td>83.803279</td>\n",
+       "      <td>83.814988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>1049400</td>\n",
+       "      <td>583.0</td>\n",
+       "      <td>83.682222</td>\n",
+       "      <td>83.955000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>1056600</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>83.359455</td>\n",
+       "      <td>83.725724</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            School Name     Type  Total Students  Total School Budget  \\\n",
+       "9      Pena High School  Charter             962               585858   \n",
+       "6    Holden High School  Charter             427               248087   \n",
+       "14   Wright High School  Charter            1800              1049400   \n",
+       "12   Thomas High School  Charter            1635              1043130   \n",
+       "11  Shelton High School  Charter            1761              1056600   \n",
+       "\n",
+       "    Per Student Budget  Average maths score  Average reading score  \n",
+       "9                609.0            83.839917              84.044699  \n",
+       "6                581.0            83.803279              83.814988  \n",
+       "14               583.0            83.682222              83.955000  \n",
+       "12               638.0            83.418349              83.848930  \n",
+       "11               600.0            83.359455              83.725724  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Sort school summary\n",
+    "school_summary = school_summary.sort_values(\"Average maths score\", ascending=False)\n",
     "\n",
-    "\n",
-    "#Select top 5"
+    "#Select top 5\n",
+    "school_summary.head(5)"
    ]
   },
   {
@@ -580,15 +685,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "2a60205e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Name</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average maths score</th>\n",
+       "      <th>Average reading score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>3094650</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>3124928</td>\n",
+       "      <td>628.0</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>2547363</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>1884411</td>\n",
+       "      <td>639.0</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>655.0</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              School Name      Type  Total Students  Total School Budget  \\\n",
+       "8     Johnson High School  District            4761              3094650   \n",
+       "0      Bailey High School  District            4976              3124928   \n",
+       "10  Rodriguez High School  District            3999              2547363   \n",
+       "2    Figueroa High School  District            2949              1884411   \n",
+       "7       Huang High School  District            2917              1910635   \n",
+       "\n",
+       "    Per Student Budget  Average maths score  Average reading score  \n",
+       "8                650.0            77.072464              80.966394  \n",
+       "0                628.0            77.048432              81.033963  \n",
+       "10               637.0            76.842711              80.744686  \n",
+       "2                639.0            76.711767              81.158020  \n",
+       "7                655.0            76.629414              81.182722  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Sort school summary\n",
     "\n",
     "\n",
-    "#Select bottom 5\n"
+    "#Select bottom 5\n",
+    "school_summary.tail(5)"
    ]
   },
   {
